# datadelve

./: .coveragerc  .gitignore  Makefile  README.md  Taskfile  pyproject.toml  tag.sh
datadelve/: __init__.py  datadelve.py  exceptions.py  main.py
datalayers/: main.py
docs/: conf.py  index.rst
tests/: test_delver.py  test_interface.py
