[tool.poetry]
name = "datadelve"
version = "0.5.0"
description = "A library to read and manipulate nested data structures, particularly ones read from JSON files"
authors = ["Nick Thurmes <nthurmes@gmail.com>"]
license = "GPL-2.0+"

[tool.poetry.dependencies]
python = "^3.5"
jsonpointer = "^2.0"

[tool.poetry.dev-dependencies]
coveralls = "^3.0.1"
nose2 = "^0.9.1"
coverage = "^5.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
